# opengl-engine

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
include/hello/: hello.h
src/: glad.c  hello.cpp  main.cpp
